--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar">
+    <div class="calendar calendar--start-day-mon">
       <ul class="calendar__days">
         <li class="calendar__day"></li>
         <li class="calendar__day"></li>
