--- a/src/index.html
+++ b/src/index.html
@@ -8,40 +8,129 @@
   </head>
   <body>
     <div class="calendar">
-      <div class="calendar__box">
-        <div class="calendar__day calendar__day--date-1"></div>
-        <div class="calendar__day calendar__day--date-2"></div>
-        <div class="calendar__day calendar__day--date-3"></div>
-        <div class="calendar__day calendar__day--date-4"></div>
-        <div class="calendar__day calendar__day--date-5"></div>
-        <div class="calendar__day calendar__day--date-6"></div>
-        <div class="calendar__day calendar__day--date-7"></div>
-        <div class="calendar__day calendar__day--date-8"></div>
-        <div class="calendar__day calendar__day--date-9"></div>
-        <div class="calendar__day calendar__day--date-10"></div>
-        <div class="calendar__day calendar__day--date-11"></div>
-        <div class="calendar__day calendar__day--date-12"></div>
-        <div class="calendar__day calendar__day--date-13"></div>
-        <div class="calendar__day calendar__day--date-14"></div>
-        <div class="calendar__day calendar__day--date-15"></div>
-        <div class="calendar__day calendar__day--date-16"></div>
-        <div class="calendar__day calendar__day--date-17"></div>
-        <div class="calendar__day calendar__day--date-18"></div>
-        <div class="calendar__day calendar__day--date-19"></div>
-        <div class="calendar__day calendar__day--date-20"></div>
-        <div class="calendar__day calendar__day--date-21"></div>
-        <div class="calendar__day calendar__day--date-22"></div>
-        <div class="calendar__day calendar__day--date-23"></div>
-        <div class="calendar__day calendar__day--date-24"></div>
-        <div class="calendar__day calendar__day--date-25"></div>
-        <div class="calendar__day calendar__day--date-26"></div>
-        <div class="calendar__day calendar__day--date-27"></div>
-        <div class="calendar__day calendar__day--date-28"></div>
-        <div class="calendar__day calendar__day--date-29"></div>
-        <div class="calendar__day calendar__day--date-30"></div>
-        <div class="calendar__day calendar__day--date-31"></div>
+      <div
+        class="calendar__box calendar__box--date-1 calendar__box--start-day-mon">
       </div>
 
+      <div
+        class="calendar__box calendar__box--date-2 calendar__box--start-day-tue">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-3 calendar__box--start-day-wed">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-4 calendar__box--start-day-thu">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-5 calendar__box--start-day-fri">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-6 calendar__box--start-day-sat">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-7 calendar__box--start-day-sun">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-8 calendar__box--start-day-mon">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-9 calendar__box--start-day-tue">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-10 calendar__box--start-day-wed ">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-11 calendar__box--start-day-thu">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-12 calendar__box--start-day-fri">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-13 calendar__box--start-day-sat">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-14 calendar__box--start-day-sun">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-15 calendar__box--start-day-mon">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-16 calendar__box--start-day-tue">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-17 calendar__box--start-day-wed">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-18 calendar__box--start-day-thu">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-19 calendar__box--start-day-fri">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-20 calendar__box--start-day-sat">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-21 calendar__box--start-day-sun">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-22 calendar__box--start-day-mon">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-23 calendar__box--start-day-tue">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-24 calendar__box--start-day-wed">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-25 calendar__box--start-day-thu">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-26 calendar__box--start-day-fri">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-27 calendar__box--start-day-sat">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-28 calendar__box--start-day-sun">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-29 calendar__box--month-length-29 calendar__box--start-day-mon">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-30 calendar__box--month-length-30 calendar__box--start-day-tue">
+      </div>
+
+      <div
+        class="calendar__box calendar__box--date-31 calendar__box--month-length-31 calendar__box--start-day-wed">
+      </div>
     </div>
   </body>
 </html>
