--- a/src/index.html
+++ b/src/index.html
@@ -7,40 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar calendar--start-day-mon">
-      <ul class="calendar__days">
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-        <li class="calendar__day"></li>
-      </ul>
-    </div>
+    <ul class="calendar calendar--start--day-mon calendar--month-length-28">
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+    </ul>
   </body>
 </html>
