--- a/src/index.html
+++ b/src/index.html
@@ -8,98 +8,67 @@
   </head>
   <body>
     <div class="calendar calendar--start-day-mon calendar--month-length-29">
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
 
-      <div
-        class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </div>
   </body>
 </html>
