--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
+  <body class="body">
     <section class="section">
       <div class="calendar calendar__start-day--fri calendar__month-length--28">
         <div class="calendar__day calendar__day--1"></div>
