--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div
-     class="celendar">
+    <div class="celendar">
       <ul class="celendar__month month">
         <li class="month__day"></li>
         <li class="month__day"></li>
