--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div class="calendar calendar--start-day--wed calendar--month-length--29">
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+      <p class="calendar__date"></p>
+    </div>
   </body>
 </html>
