--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar calendar--first-day--sun calendar--month--duration--31">
+    <div class="calendar calendar--start-day--sun calendar--days--29">
       <div class="calendar__cell"></div>
       <div class="calendar__cell"></div>
       <div class="calendar__cell"></div>
