--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
+    <ul class="calendar calendar--start-day--mon calendar--month-length-31">
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+    </ul>
   </body>
 </html>
