--- a/src/index.html
+++ b/src/index.html
@@ -7,38 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <main class="calendar calendar--month-length--30 calendar--start-day--fri">
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-    </main>
+    <ul class="calendar calendar--month-length--25 calendar--start-day--dfs">
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+    </ul>
   </body>
 </html>
