--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="calendar">
-      <div class="calendar__field">
+      <div class="calendar__field calendar__field--start-day--fri calendar__field--month-length--29">
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
