--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendar</title>
+    <link rel="stylesheet" href="./styles/reset.scss">
+    <link rel="stylesheet" href="./styles/variable.scss">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
